--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5434/secure_accountdb
 spring.datasource.username=postgres
-spring.datasource.password=12345678
+spring.datasource.password=********
 
 
 # Hibernate properties (optional, but commonly used)
@@ -12,7 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=tresorlundimu@gmail.com
-spring.mail.password=xshj lgsy dpnu cght
+spring.mail.username=**********
+spring.mail.password=***********
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
